--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-version: "3.8"
-
 services:
   audio-stream-server:
     build:
       context: https://github.com/fruitcake514/audioOverIP.git  # GitHub URL for your repository
-      dockerfile: Dockerfile  # Path to the Dockerfile in the repo (if it's named something else)
+      dockerfile: Dockerfile  # Path to the Dockerfile in the repo
     container_name: audio_stream_server
     ports:
-      - "5000:5000"  # Web server port
-      - "12345:12345" # Audio streaming port
+      - "12345:12345"  # Audio streaming port (this one might be fixed depending on your app's needs)
+      - "${PORT:-5000}:${PORT:-5000}"  # Web server port, default to 5000 if PORT environment variable is not set
     environment:
       - RTSP_URL=rtsp://your-rtsp-stream-url  # Optional: set RTSP URL if using RTSP stream
+      - PORT=${PORT:-5000}  # Set PORT environment variable (defaults to 5000)
     restart: always
 
   web:
@@ -19,7 +18,7 @@ services:
       dockerfile: Dockerfile
     container_name: web_server
     ports:
-      - "5000:5000"
+      - "${PORT:-5000}:${PORT:-5000}"  # Web server port, default to 5000 if PORT environment variable is not set
     restart: always
     depends_on:
       - audio-stream-server
