--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,20 @@
 services:
-  audio-stream-server:
+  audio-stream:
     build:
-      context: https://github.com/fruitcake514/audioOverIP.git  # GitHub URL for your repository
-      dockerfile: Dockerfile  # Path to the Dockerfile in the repo
+      context: https://github.com/fruitcake514/audioOverIP.git  # Your GitHub repository URL
+      dockerfile: Dockerfile
     container_name: audio_stream_server
     ports:
-      - "12345:12345"  # Audio streaming port (this one might be fixed depending on your app's needs)
-      - "${PORT:-5000}:${PORT:-5000}"  # Web server port, default to 5000 if PORT environment variable is not set
+      - "${PORT:-5000}:${PORT:-5000}"
     environment:
-      - RTSP_URL=rtsp://your-rtsp-stream-url  # Optional: set RTSP URL if using RTSP stream
-      - PORT=${PORT:-5000}  # Set PORT environment variable (defaults to 5000)
+      - PORT=${PORT:-5000}
+      - STREAM_URL=${STREAM_URL:-}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-password}
     restart: always
-
-  web:
-    build:
-      context: https://github.com/fruitcake514/audioOverIP.git
-      dockerfile: Dockerfile
-    container_name: web_server
-    ports:
-      - "${PORT:-5000}:${PORT:-5000}"  # Web server port, default to 5000 if PORT environment variable is not set
-    restart: always
-    depends_on:
-      - audio-stream-server
+    volumes:
+      - ./config:/app/config.json  # Mount config file as volume to persist changes
+    deploy:
+      resources:
+        limits:
+          memory: 1G
